--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ footer {
         
 
 <!-- Profile Picture -->
-<img src="file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit%20user%20files/personal%20data/FB.jpg" alt="Profile Picture">
+<img src="pict.jpeg" alt="Profile Picture">
 
          <h2>Ariane Sapuay Tranquillero </h2>
          </section>
