--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ footer {
         
 
 <!-- Profile Picture -->
-<img src="pict.jpeg" alt="Profile Picture">
+<img src="pic.jpg" alt="Profile Picture">
 
          <h2>Ariane Sapuay Tranquillero </h2>
          </section>
